--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,12 @@
        font-display: swap;
        font-style: italic;
 }
+.font-12{
+  font-size: 12px;
+}
+.font-14{
+  font-size: 14px;
+}
 .font-16{
   font-size: 16px;
 }
@@ -761,7 +767,7 @@ h6 {
   width: 300px;
   z-index: 996;
   transition: all 0.3s;
-  padding: 20px;
+  padding: 20px 0px;
   overflow-y: inherit;
   scrollbar-width: thin;
   scrollbar-color: #aab7cf transparent;
@@ -1003,14 +1009,8 @@ h6 {
 }
 .sidebar-nav .nav-item .nav-link.active{
   color: #ED702D;
+  border-left: 5px solid #cf6328;
 }
 .sidebar-nav .nav-item .nav-link.active i{
   color: #ED702D;
-}
-.sidebar-nav .nav-item .nav-link.active .fa ::before {
-  left: 1rem;
-  top: 1px;
-  border-left: 5px solid #cf6328;
-  height: 20px;
-  width: 10px;
 }
