--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,11 +133,48 @@
 .height-42{
   height: 42px;
 }
+.height-50{
+  height: 50px;
+}
 .textOrange{
   color: #ED702D !important;
 }
 .textBlak{
   color: #111111;
+}
+.tableEmployee{
+  border-color: #fde0e1;
+  border-width: 2px;
+  border-top-left-radius:16px;
+  border-top-right-radius:16px;
+}
+.tableEmployee .table{
+  border: 1px solid #fde0e1;
+  border-radius: 5px;
+  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.08);
+}
+.tableEmployee thead{
+  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.08);
+}
+.tableEmployee thead th{
+  background-color:#F8F8F8;
+  font-family: "Satoshi-Bold";
+  padding: 1rem;
+}
+.tableEmployee thead th:first-child{
+  border-radius: 16px 0px 0px 0px;
+}
+.tableEmployee thead th:last-child{
+  border-radius: 0px 16px 0px 0px;
+}
+.tableEmployee tbody td{
+  background-color: white;
+  padding: 1rem;
+}
+.tableEmployee tbody td p{
+  margin-bottom: 0.2rem;
+  color: #292929;
+  font-family: "Satoshi-Medium";
 }
 .btnOrange{
   background-color: #ED702D;
@@ -815,7 +852,7 @@ h6 {
     font-size: 14px;
     padding-right: 5px;
   }
-  .toggle-sidebar .sidebar .sidebar-nav .nav-link .fa ,.toggle-sidebar .sidebar .sidebar-nav .nav-link img{
+  .toggle-sidebar .sidebar .sidebar-nav .nav-link img{
     display: block;
   }
 }
@@ -847,7 +884,10 @@ h6 {
 .sidebar-nav .nav-item {
   margin-bottom: 5px;
 }
-
+.sidebar-nav .nav-item .nav-link img{
+  width: 23px;
+  height: 23px;
+}
 .sidebar-nav .nav-heading {
   font-size: 11px;
   text-transform: uppercase;
@@ -946,6 +986,12 @@ h6 {
   border: 1px solid #767676;
   font-size: 14px;
   color: #111111;
+}
+.formGeneral .form-label{
+  font-size: 14px;
+  font-weight: bold;
+  color: #111111;
+  opacity: 1;
 }
 .formGeneral .input-group .input-group-text{
   border-color: #ED702D;
