--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -843,6 +843,13 @@ h6 {
   min-height: 42px;
   color: #111111;
 }
+.form .form-check-input:focus{
+  box-shadow: 0px 0px 20px rgb(164 164 164 / 49%);
+}
+.form .form-check-input:checked{
+  background-color: #ED702D !important;
+  border-color: #ED702D !important;
+}
 .form .form-control:focus{
   box-shadow: 0px 0px 20px rgb(164 164 164 / 49%);
 }
